tests/baselines/reference/jsDeclarationsSubclassWithExplicitNoArgumentConstructor.errors.txt
tests/cases/conformance/jsdoc/declarations/index.js(11,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Super'.


==== tests/cases/conformance/jsdoc/declarations/index.js (1 errors) ====
    export class Super {
        /**
         * @param {string} firstArg
         * @param {string} secondArg
         */
        constructor(firstArg, secondArg) { }
    }
    
    export class Sub extends Super {
        constructor() {
            super('first', 'second');
            ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'Super'.
        }
    }